MacViews: Don't draw blank windows after de-miniturize

Whenever the ui::Layer for BridgedNativeWidgetMac is hidden, also lock
the ui::Compositor ("lock" in this sense means "disable drawing new
frames").

This ensure that we won't draw any blank frames (which is what would
result in a blank frame).

Bug: 712244
Change-Id: Ia8c17742e6a48190b9a3aead6443102a585d1f7d
Reviewed-on: https://chromium-review.googlesource.com/1129320
Commit-Queue: ccameron <ccameron@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#574187}
Former-commit-id: bdd9c892c625154a24629b59c2eb117b4c41b538